--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^20.19.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "daisyui": "^5.0.46",
     "eslint": "^9.31.0",
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
