--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier . --check",
+    "format:write": "prettier . --write"
   },
   "dependencies": {
-    "next": "15.3.3",
+    "next": "15.3.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -21,7 +23,11 @@
     "@types/react-dom": "^19.1.6",
     "daisyui": "^5.0.46",
     "eslint": "^9.31.0",
-    "eslint-config-next": "15.3.3",
+    "eslint-config-next": "15.3.5",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
     "typescript": "^5.8.3"
   }
