--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier . --check",
-    "format:write": "prettier . --write"
+    "format:write": "prettier . --write",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "better-auth": "^1.2.12",
+    "dotenv": "^17.2.0",
+    "drizzle-orm": "^0.44.2",
     "next": "15.3.5",
+    "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -22,6 +29,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "daisyui": "^5.0.46",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.31.0",
     "eslint-config-next": "15.3.5",
     "eslint-config-prettier": "^10.1.5",
