--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "better-auth": "^1.2.12",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.2",
+    "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "pg": "^8.16.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
