--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
     "lucide-react": "^0.525.0",
+    "minio": "^8.0.5",
     "next": "15.4.2",
     "pg": "^8.16.3",
     "react": "^19.1.0",
