--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
     "better-auth": "^1.2.12",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
     "lucide-react": "^0.525.0",
@@ -27,6 +28,7 @@
     "react-hook-form": "^7.60.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.6",
+    "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
   },
   "devDependencies": {
