--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.6",
