chore: create MINIO_USE_SSL env

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,13 @@
+# Auth
 BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=
+
+# Database
+DATABASE_URL=
+
+# Minio
+MINIO_ENDPOINT=
+MINIO_PORT=
+MINIO_ACCESS_KEY=
+MINIO_SECRET_KEY=
+MINIO_USE_SSL=
